--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -550,7 +550,7 @@ ol ul li {
 }
 
 .markdown li > p {
-  color: var(--text-primary);
+  color: var(--text-secondary);
   font-weight: 600;
   font-size: 15px;
   font-family: var(--font-family-inter);
