--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -82,7 +82,8 @@ html[data-theme="dark"] .logo-dark {
   transition: color 0.2s;
   padding: 8px;
   min-width: 89px;
-  height:32px
+  height:32px;
+  cursor: pointer;
 }
 
 .dropdown-arrow {
@@ -92,7 +93,6 @@ html[data-theme="dark"] .logo-dark {
 }
 
 .dropdown-button.active {
-  border-color: var(--background-03);
   text-decoration: none;
   border-radius: 8px;
   color: var(--text-primary); 
@@ -123,7 +123,7 @@ html[data-theme="dark"] .logo-dark {
 }
 
 html[data-theme="dark"] .dropdown-backdrop{
-    background-color: var(--neutral-900)!important;
+    background-color: transparent!important;
 }
 
 /* ======================================== */
@@ -167,7 +167,7 @@ html[data-theme="dark"] .dropdown-backdrop{
 .item-container-platform {
   display: flex;
   transition: background-color 0.2s;
-  cursor: pointer;
+  cursor: default;
   border-radius: 6px;
 }
 
