--- a/src/components/CodeBadge/CodeBadge.module.css
+++ b/src/components/CodeBadge/CodeBadge.module.css
@@ -19,7 +19,7 @@
 }
 
 html[data-theme='dark'] .codeBadge{
-  color: var(--text-secondary);
+  color: var(--text-primary);
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
 
 }
