--- a/src/components/navbar/mobileNavbar.module.css
+++ b/src/components/navbar/mobileNavbar.module.css
@@ -39,27 +39,28 @@
   display: flex;
   height: 100%;
   width: 100%;
-  align-items: center;
   justify-content: space-between;
 }
 
 /* --- Logo Container --- */
 .logoContainer {
   flex-shrink: 0; /* flex-shrink-0 */
+  vertical-align: middle;
+  align-items: center;
 }
 
 /* --- Logo Image --- */
 
 .darkLogo {
   display: block; /* block */
-  height: 32px;
-  min-width: 156px;
+  max-height: 32px;
+  max-width: 156px;
 }
 
 .lightLogo {
   display: block; /* block */
-  height: 32px;
-  min-width: 156px;
+  max-height: 32px;
+  max-width: 156px;
 }
 
 /* --- Right Actions Container (Search + Options) --- */
